--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,59 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.quote-box {
+  width: 30%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  border-radius: 3%;
 }
 
-.App-link {
-  color: #61dafb;
+.text {
+  padding: 4.8rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.author {
+  padding: 4.8rem 4.8rem 1.6rem 4.8rem;
+  text-align: right;
+  font-size: 3.2rem;
+  color: #515151;
+}
+
+.row1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 1.6rem;
+}
+
+.row2 {
+  padding: 1.2rem;
+  text-align: center;
+  font-size: 1.2rem;
+}
+
+.footer-btn {
+  padding: 1.6rem;
+  background-color: #eee;
+  border: none;
+  color: #515151;
+}
+
+.footer-btn:hover,
+.footer-btn:focus {
+  background-color: #aaa;
+  color: #efefef;
+}
+
+#tweet-quote {
+  text-decoration: none;
+}
+
+@media all and (max-width: 800px) {
+  footer {
+    flex-direction: column;
+    text-align: center;
   }
-  to {
-    transform: rotate(360deg);
+
+  .footer-btn {
+    margin-top: 1.6rem;
   }
 }
