--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,35 @@
+html {
+  font-size: 62.5%;
+  font-family: 'Arimo', sans-serif;
+  color: #515151;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 1.6rem;
+  background-color: #efefef;
+}
+
+h1 {
+  font-family: 'Alfa Slab One', cursive;
+  font-size: 4rem;
+}
+
+a,
+button {
+  font-size: 1.6rem;
+}
+
+#root {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
