--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,11 @@
 }
 
 .text {
-  padding: 4.8rem;
+  padding: 1.6rem 4.8rem;
 }
 
 .author {
-  padding: 4.8rem 4.8rem 1.6rem 4.8rem;
+  padding: 1.6rem 4.8rem 1.6rem 4.8rem;
   text-align: right;
   font-size: 3.2rem;
   color: #515151;
@@ -21,7 +21,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 1.6rem;
+  padding: 1.6rem 3.2rem;
 }
 
 .row2 {
@@ -38,7 +38,7 @@
 }
 
 .footer-btn:hover,
-.footer-btn:focus {
+.footer-btn:active {
   background-color: #aaa;
   color: #efefef;
 }
